<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentListFragment"
        android:layout_margin="@dimen/margin_fragment_student_list">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="@dimen/width_fragment_student_list_layout"
            android:layout_height="@dimen/height_fragment_student_list_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/recycler_view_students"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_fragment_student_list_recycler_view_bottom"
            app:layout_constraintBottom_toTopOf="@+id/button_student_list_add"/>

    <Button
            android:text="@string/student_list_fragment_delete_entry_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_student_list_delete"
            app:layout_constraintStart_toEndOf="@+id/button_student_list_sort"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_student_list_sort"/>
    <Button
            android:text="@string/student_list_fragment_add_entry_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_student_list_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_student_list_sort"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_fragment_student_list_button_add_bottom"/>
    <Button
            android:text="@string/student_list_fragment_sort_entries_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_student_list_sort"
            app:layout_constraintStart_toEndOf="@+id/button_student_list_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_student_list_delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_student_list_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>