<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CreateStudentCardActivity">

    <TextView
            android:text="@string/create_student_card_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_fragment_create_student_card_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_all_fragment_title"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/create_student_card_fragment_text_view_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_fragment_create_student_card_name_label"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_text_view_top"
            app:layout_constraintTop_toBottomOf="@+id/image_button_fragment_create_student_card_picture"
            app:layout_constraintStart_toStartOf="@+id/image_button_fragment_create_student_card_picture"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_text_fragment_create_student_card_name"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_edit_text_top"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_create_student_card_name_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_fragment_create_student_card_name_label"/>
    <TextView
            android:text="@string/create_student_card_fragment_text_view_age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_fragment_create_student_card_age_label"
            app:layout_constraintStart_toStartOf="@+id/edit_text_fragment_create_student_card_name"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_text_view_top"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_fragment_create_student_card_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edit_text_fragment_create_student_card_age"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_edit_text_top"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_create_student_card_age_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_fragment_create_student_card_age_label"/>
    <TextView
            android:text="@string/create_student_card_fragment_text_view_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_fragment_create_student_card_phone_label"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_fragment_create_student_card_age"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_text_view_top"
            app:layout_constraintStart_toStartOf="@+id/edit_text_fragment_create_student_card_age"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edit_text_fragment_create_student_card_phone"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_edit_text_top"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_create_student_card_phone_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_fragment_create_student_card_phone_label"/>
    <ImageButton
            android:layout_width="@dimen/width_fragment_create_student_card_image"
            android:layout_height="@dimen/height_fragment_create_student_card_image"
            tools:src="@drawable/picture_avatar_placeholder"
            android:id="@+id/image_button_fragment_create_student_card_picture"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_image_button_top"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_create_student_card_title"
            android:src="@drawable/picture_avatar_placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/create_student_card_fragment_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fragment_create_student_card_submit"
            android:layout_marginTop="@dimen/margin_fragment_create_student_card_all_button_top"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_fragment_create_student_card_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="createStudent"/>

</androidx.constraintlayout.widget.ConstraintLayout>